25/05/2022:
	- Changes to improve logging of timer reporting and addition of std::chrono to Timer.h for supported platforms


23/05/2022:
	- Fix to IIIF.cc to better determine whether a request is for a tile and suitable to be passed to JTL.
	  Fixes problem identified in: https://github.com/ruven/iipsrv/issues/228


22/05/2022:
	- Removed unnecessary <iostream> includes.
	- Tweak to Kakadu configure and updated concurrency check in KakaduImage.cc to use C++11 std::thread if available.


20/05/2022:
	- Added WebP output support. Both tile and region output are supported for both IIP and IIIF. Individual tiles can
	  be requested using the WTL paramter which works in the same way as PTL for PNG and JTL for JPEG. CVT region
	  requests can be made with CVT=webp. WebP encoder supports alpha channels and 8 bit images. To compile, iipsrv
	  requires the libwebp development headers and libraries, which are automatically detected in ./configure.


17/04/2022:
	- Re-write of Transform::twist() function to add OpenMP parallelization and allow supplied CTW matrix to determine
	  number of output channels.
	- Updated TPTImage to better handle the SMINSAMPLEVALUE and SMAXSAMPLEVALUE tags. Multi-band images better supported
	  as well as more robust support for missing tags.


08/04/2022:
	- Added extra FCGI initialization call plus other FCGI-related tweaks. This finally allows iipsrv to be started
	  directly on the command line on Windows


05/04/2022:
	- Removed unnecessary FCGI include from Main.cc (already included in Writer.h)


04/04/2022:
	- Switched mktime() to timegm() in FIF.cc, which fixes occasional errors when using mktime(). timegm() is not only faster,
	  but avoids having to set our timezone with tzset(), and is therefore simpler. This change reverses commit
	  https://github.com/ruven/iipsrv/commit/69b6a572147aaacf055b134af591559156a34d2e which is no longer relevant.